Adding babel and moving everything to src directory
Adding and adjusting some npm scripts
